// Škafetin - e-Imovina Županije
// Dijagram baze. Otvoriti na https://dbdiagram.io
// Ažurira se uz svaku promjenu modela.
// Duljine varchar(N) i default vrijednosti su opisne: modeli nemaju anotacije,
// pa ih postavlja aplikacija, a ne shema baze.

Table LocationTypes {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Ured, Škola, Zdravstvena ustanova, Socijalna ustanova, Skladište, Terenska lokacija'
}

Table EquipmentCategories {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Računalo, Mrežna oprema, Namještaj, Alat, Klimatizacija, Medicinska oprema, Ostalo'
}

Table EquipmentStatuses {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Na skladištu, Zaduženo, Na servisu, Nedostaje, Otpisano'
}

Table AssignmentStatuses {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Aktivno, Vraćeno, Premješteno, Stornirano'
}

Table InventoryStatuses {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Nacrt, Otvorena, U tijeku, Završena, Zaključana'
}

Table RequestStatuses {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Zaprimljeno, U obradi, Odobreno, Odbijeno, Realizirano, Zatvoreno'
}

Table WriteOffRequestStatuses {
  Id int [pk, increment]
  Name varchar(50) [not null]
  Note: 'Zaprimljeno, U obradi, Odobreno, Odbijeno, Provedeno'
}

Table Locations {
  Id int [pk, increment]
  Name varchar(100) [not null]
  Address varchar(200) [not null]
  Zip int [not null]
  City varchar(100) [not null]
  LocationTypeId int [not null]
  IsActive boolean [not null, default: true]
}

Table Employees {
  Id int [pk, increment]
  FirstName varchar(50) [not null]
  LastName varchar(50) [not null]
  Email varchar(150) [not null, unique]
  Phone varchar(30)
  JobTitle varchar(100)
  LocationId int [not null]
  IsActive boolean [not null, default: true]
}

Table Equipment {
  Id int [pk, increment]
  InventoryNumber varchar(30) [not null, unique]
  Name varchar(150) [not null]
  Description varchar(1000)
  Manufacturer varchar(100)
  Model varchar(100)
  SerialNumber varchar(100) [unique]
  EquipmentCategoryId int [not null]
  EquipmentStatusId int [not null, default: 1]
  LocationId int [not null]
  PurchaseValue decimal(18,2)
  CreatedAt datetime [not null]
  Note: 'SerialNumber je jedinstven samo kad je popunjen (indeks s filterom).'
}

Table Assignments {
  Id int [pk, increment]
  EquipmentId int [not null]
  EmployeeId int [not null]
  AssignedAt datetime [not null]
  ReturnedAt datetime
  AssignmentStatusId int [not null]
  PreviousAssignmentId int
  AssignedByEmployeeId int
  Note varchar(500)
  ReturnNote varchar(500)
  CancelReason varchar(200)
  CreatedAt datetime [not null]
  Note: 'Povijest. Zapisi se ne brišu ni ne prepisuju.'
}

Table Inventories {
  Id int [pk, increment]
  Code varchar(30) [not null, unique]
  LocationId int [not null]
  InventoryStatusId int [not null, default: 1]
  CreatedByEmployeeId int [not null]
  CreatedAt datetime [not null]
  StartedAt datetime
  CompletedAt datetime
  LockedAt datetime
  Note varchar(500)
}

Table InventoryItems {
  Id int [pk, increment]
  InventoryId int [not null]
  EquipmentId int [not null]
  ExpectedEmployeeId int
  ExpectedLocationId int [not null]
  IsFound boolean
  IsDamaged boolean [not null, default: false]
  FoundLocationId int
  Note varchar(500)
  CheckedAt datetime
  CheckedByEmployeeId int
}

Table EquipmentRequests {
  Id int [pk, increment]
  RequestedByEmployeeId int [not null]
  EquipmentCategoryId int [not null]
  Title varchar(150) [not null]
  Description varchar(1000) [not null]
  ReplacementForEquipmentId int
  RequestStatusId int [not null, default: 1]
  CreatedAt datetime [not null]
  ProcessedAt datetime
  ProcessedByEmployeeId int
  DecisionNote varchar(500)
  ResultingEquipmentId int
}

Table WriteOffRequests {
  Id int [pk, increment]
  EquipmentId int [not null]
  RequestedByEmployeeId int [not null]
  WriteOffRequestStatusId int [not null, default: 1]
  Reason varchar(1000) [not null]
  CreatedAt datetime [not null]
  ProcessedAt datetime
  ProcessedByEmployeeId int
  DecisionNote varchar(500)
  ExecutedAt datetime
}

Table EquipmentMedia {
  Id int [pk, increment]
  EquipmentId int [not null]
  Title varchar(150) [not null]
  MediaKind varchar(20) [not null]
  IsCover boolean [not null, default: false]
  OriginalFileName varchar(260) [not null]
  StoredFileName varchar(100) [not null]
  ContentType varchar(100) [not null]
  FileSize bigint [not null]
  UploadedAt datetime [not null]
  UploadedByEmployeeId int
}

Table AppUsers {
  Id int [pk, increment]
  Username varchar(50) [not null, unique]
  Email varchar(150) [not null, unique]
  PasswordHash varchar [not null]
  PasswordSalt varchar [not null]
  EmployeeId int
  IsActive boolean [not null, default: true]
  CreatedAt datetime [not null]
}

Table AppRoles {
  Id int [pk, increment]
  Name varchar(50) [not null, unique]
  Note: 'Admin, InventoryManager, LocationResponsible, Employee'
}

Table AppUserRoles {
  AppUserId int [not null]
  AppRoleId int [not null]
  Indexes {
    (AppUserId, AppRoleId) [pk]
  }
}

Table EquipmentStatusHistory {
  Id int [pk, increment]
  EquipmentId int [not null]
  FromStatusId int
  ToStatusId int [not null]
  FromLocationId int
  ToLocationId int
  ChangedAt datetime [not null]
  ChangedByEmployeeId int
  Reason varchar(300)
  Note: 'Povijest statusa i lokacija. Dopunjuje se pri svakoj promjeni, zapisi se ne brišu.'
}

Ref: Locations.LocationTypeId > LocationTypes.Id
Ref: Employees.LocationId > Locations.Id

Ref: Equipment.EquipmentCategoryId > EquipmentCategories.Id
Ref: Equipment.EquipmentStatusId > EquipmentStatuses.Id
Ref: Equipment.LocationId > Locations.Id

Ref: Assignments.EquipmentId > Equipment.Id
Ref: Assignments.EmployeeId > Employees.Id
Ref: Assignments.AssignmentStatusId > AssignmentStatuses.Id
Ref: Assignments.PreviousAssignmentId > Assignments.Id
Ref: Assignments.AssignedByEmployeeId > Employees.Id

Ref: Inventories.LocationId > Locations.Id
Ref: Inventories.InventoryStatusId > InventoryStatuses.Id
Ref: Inventories.CreatedByEmployeeId > Employees.Id

Ref: InventoryItems.InventoryId > Inventories.Id
Ref: InventoryItems.EquipmentId > Equipment.Id
Ref: InventoryItems.ExpectedEmployeeId > Employees.Id
Ref: InventoryItems.ExpectedLocationId > Locations.Id
Ref: InventoryItems.FoundLocationId > Locations.Id
Ref: InventoryItems.CheckedByEmployeeId > Employees.Id

Ref: EquipmentRequests.RequestedByEmployeeId > Employees.Id
Ref: EquipmentRequests.EquipmentCategoryId > EquipmentCategories.Id
Ref: EquipmentRequests.ReplacementForEquipmentId > Equipment.Id
Ref: EquipmentRequests.RequestStatusId > RequestStatuses.Id
Ref: EquipmentRequests.ProcessedByEmployeeId > Employees.Id
Ref: EquipmentRequests.ResultingEquipmentId > Equipment.Id

Ref: WriteOffRequests.EquipmentId > Equipment.Id
Ref: WriteOffRequests.RequestedByEmployeeId > Employees.Id
Ref: WriteOffRequests.WriteOffRequestStatusId > WriteOffRequestStatuses.Id
Ref: WriteOffRequests.ProcessedByEmployeeId > Employees.Id

Ref: EquipmentMedia.EquipmentId > Equipment.Id
Ref: EquipmentMedia.UploadedByEmployeeId > Employees.Id

Ref: AppUsers.EmployeeId > Employees.Id
Ref: AppUserRoles.AppUserId > AppUsers.Id
Ref: AppUserRoles.AppRoleId > AppRoles.Id

Ref: EquipmentStatusHistory.EquipmentId > Equipment.Id
Ref: EquipmentStatusHistory.FromStatusId > EquipmentStatuses.Id
Ref: EquipmentStatusHistory.ToStatusId > EquipmentStatuses.Id
Ref: EquipmentStatusHistory.FromLocationId > Locations.Id
Ref: EquipmentStatusHistory.ToLocationId > Locations.Id
Ref: EquipmentStatusHistory.ChangedByEmployeeId > Employees.Id
